# event-management-platform

./: .gitignore  main.py  pyproject.toml  readme.md
data/: base.py
data/dtos/: Schema.txt  feedback.py  tickets.py
data/models/: feedback.py  tickets.py
